--- a/chopchop.yml
+++ b/chopchop.yml
@@ -9,6 +9,7 @@ plugins:
         remediation: Make sure that GENEREX UPS access is restricted & monitored
         description: GENEREX UPS is accessible | don't move this rule to avoid client timeout
         severity: "Medium"
+        tested: true
   - uri: "/"
     checks:
       - name: HP Printer
@@ -18,6 +19,7 @@ plugins:
         description: HP Printer is accessible
         status_code: 200
         severity: "Low"
+        tested: true
       - name: Printer (Lexmark, Dell, Toshiba, Sindoh)
         headers:
           - "Server:Lexmark_Web_Server"
@@ -44,6 +46,7 @@ plugins:
         description: GE ViewPoint System Status is accessible / sensitive information leaking
         status_code: 200
         severity: "Low"
+        tested: true
       - name: Ascom IP-DECT Base Station
         match:
           - '<select product="Ascom IP-DECT Base Station"'
@@ -51,6 +54,7 @@ plugins:
         description: Ascom IP-DECT Base Station is accessible
         status_code: 200
         severity: "Informational"
+        tested: true
       - name: EMC Unisphere
         match:
           - 'Unisphere<br>'
@@ -58,6 +62,7 @@ plugins:
         description: EMC Unisphere is accessible
         status_code: 200
         severity: "Low"
+        tested: true
       - name: F-Secure Policy Manager Server
         match:
           - '<title>F-Secure Policy Manager Server</title>'
@@ -65,12 +70,14 @@ plugins:
         description: F-Secure Policy Manager Server is accessible
         status_code: 200
         severity: "Informational"
+        tested: true
       - name: Apache2 Debian Default Page
         match:
           - '<title>Apache2 Debian Default Page: It works</title>'
         remediation: Remove the symbolic link from the Apache default configuration
         description: Detects the presence of a default Apache page
         severity: "Informational"
+        tested: true
       - name: Cisco IOS
         headers:
           - "Server:cisco-IOS"
@@ -83,6 +90,7 @@ plugins:
         remediation: Make sure that Odin service automation access is restricted & monitored
         description: Odin service automation is accessible
         severity: "Informational"
+        tested: true
       - name: Nordex Control
         headers:
           - "Server:Jetty/3.1.8 (Windows 2000 5.0 x86)"
@@ -101,12 +109,14 @@ plugins:
         remediation: Make sure that Weave Scope access is restricted & monitored
         description: Weave Scope is accessible
         severity: "Medium"
+        tested: true
       - name: NETAVIS Observer
         match:
           - '<title>NETAVIS Observer'
         remediation: Make sure that NETAVIS Observer access is restricted & monitored
         description: NETAVIS Observer is accessible
         severity: "Informational"
+        tested: true
       - name: Jenkins
         match:
           - "hudson"
@@ -115,10 +125,12 @@ plugins:
         severity: "Informational"
         headers:
           - "Cache-Control:no-cache,no-store,must-revalidate"
+        tested: true
       - name: BigIPServer
         remediation: Encrypt sticky cookie to avoid leaking internal IPs
         description: Detects the presence of unencrypted sticky cookies that allow to retrieve internal Ips
         severity: "Medium"
+        tested: true
         headers:
           - "Set-Cookie:BIGipServer"
       - name: TakeOver
@@ -141,24 +153,28 @@ plugins:
         remediation: Delete the DNS record as soon as possible
         description: Detects the possibility of DNS Takeover
         severity: High
+        tested: true
       - name: AsmxWebservices
         match:
           - ".asmx"
         remediation: Monitor that webservices are well monitored.
         description: Checks the presence of webservices in the page
         severity: "Informational"
+        tested: true
       - name: Gitlab instance
         match:
           - "GitLab</title>"
         remediation: Make sure that access to Gitlab is properly monitored
         description: Checks if a Gitlab instance exists
         severity: "Low"
+        tested: true
       - name: Apache2 Ubuntu Default Page
         match:
           - "Apache2 Ubuntu Default Page"
         remediation: Remove the symbolic link from the Apache default configuration
         description: Detects the presence of a default Apache page
         severity: "Informational"
+        tested: true
       - name: Drupal CMS
         match:
           - "drupal"
@@ -167,6 +183,7 @@ plugins:
         remediation: Check that the version is the last one available on the vendor's website
         description: Get the Drupal version of the site
         severity: "Low"
+        tested: true
       - name: Status Code 500
         status_code: 500
         remediation: Check that the server has not completely fallen into error
@@ -184,30 +201,35 @@ plugins:
         remediation: Implementing rules at the application server level to prevent directory listing
         description: Checks that the domain root does not return a file/folder list
         severity: "Low"
+        tested: true
       - name: IndexOf2
         match:
           - "&lt;dir&gt;"
         remediation: Implementing rules at the application server level to prevent directory listing
         description: Checks that the domain root does not return a file/folder list (simple encoding)
         severity: "Low"
+        tested: true
       - name: MySQLError
         match:
           - 'You have an error in your SQL syntax'
         remediation: Do not display MySQL errors on web pages
         description: Checks that MySQL errors are not displayed
         severity: "Medium"
+        tested: true
       - name: NginxDefaultPage
         match:
           - 'Welcome to nginx!'
         remediation: Delete symbolic link from Nginx default configuration
         description: Checks that the default Nginx site is not accessible
         severity: "Low"
+        tested: true
       - name: Osticket
         match:
           - 'Helpdesk software - powered by osTicket'
         remediation: Check that the passwords used are robust
         description: Checks that the domain is not an OS Ticket instance
         severity: "Informational"
+        tested: true
       - name: PHP open code
         match:
           - '<?php'
@@ -215,12 +237,14 @@ plugins:
         description: Checks for the presence of code not interpreted by PHP
         status_code: 200
         severity: "Medium"
+        tested: true
       - name: PHP fopen function error
         match:
           - 'failed to open stream'
         remediation: Check that the application is running correctly
         description: Detects the presence of php errors via the fopen call
         severity: "Low"
+        tested: true
   - uri: "/.git/config"
     checks:
       - name: Git exposed
@@ -233,6 +257,7 @@ plugins:
         remediation: Do not deploy .git folder on production servers
         description: Checks that the GIT repository is accessible from the site
         severity: "High"
+        tested: true
   - uri: "/crossdomain.xml"
     checks:
       - name: wildcard
@@ -241,6 +266,7 @@ plugins:
         remediation: Delete wildcards from xml files
         description: Checks for the presence of a crossdomain.xml file with a wildcard for the domain
         severity: "High"
+        tested: true
   - uri: "/manager/html"
     checks:
       - name: tomcat manager
@@ -248,6 +274,7 @@ plugins:
         remediation: Disable this interface in production
         description: Checks that under /manager/html the Tomcat administration interface is not accessible
         severity: "Medium"
+        tested: true
   - uri: "/.htpasswd"
     checks:
       - name: .htpasswd not interpreted
@@ -257,6 +284,7 @@ plugins:
         description: Checks for the presence of an .htpasswd file at the root of the domain
         severity: "Medium"
         status_code: 200
+        tested: true
         no_match:
           - "<a"
           - "</"
@@ -269,6 +297,7 @@ plugins:
         description: Checks the presence of an .htaccess file at the root of the domain
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/idontexist"
     checks:
       - name: detailed 404 page
@@ -278,6 +307,7 @@ plugins:
         remediation: Delete the verbose mode on the whole application
         description: Detects the presence of the verbose mode when in error
         severity: "Low"
+        tested: true
   - uri: "/cgi-bin/test/test.cgi"
     checks:
       - name: standard test.cgi page
@@ -287,6 +317,7 @@ plugins:
         description: Checks for the presence of a test.cgi file
         severity: "Low"
         status_code: 200
+        tested: true
   - uri: "/adminer.php"
     checks:
       - name: Adminer php file
@@ -295,6 +326,7 @@ plugins:
         remediation: Check that only a person with a strong password can use this file
         description: Discovery of a PHP file to administer the database
         severity: "Low"
+        tested: true
   - uri: "/login"
     checks:
       - name: Login Page Apostrophe
@@ -303,12 +335,14 @@ plugins:
         remediation: Check that the administration interfaces are well protected
         description: Detects the presence of a login page using the Apostrophe Framework (from Digital Factory)
         severity: "Informational"
+        tested: true
       - name: Grafana
         match:
           - "isGrafanaAdmin"
         remediation: Check that the passwords used are robust
         description: Check access to Grafana administration
         severity: "Informational"
+        tested: true
   - uri: "/user/login"
     checks:
       - name: eZ Publish Admin Panel
@@ -317,6 +351,7 @@ plugins:
         remediation: Check that the passwords used are robust
         description: Check access to the eZ Publish administration
         severity: "Low"
+        tested: true
   - uri: "/fckeditor/editor/filemanager/browser/default/browser.html"
     checks:
       - name: FckEditor
@@ -325,6 +360,7 @@ plugins:
         remediation: Put authentication on this form
         description: Check access to a wysiwyg fckeditor
         severity: "High"
+        tested: true
   - uri: "/.idea/workspace.xml"
     checks:
       - name: Idea WorkSpace
@@ -333,6 +369,7 @@ plugins:
         remediation: Delete file
         description: Checks the access of some developer's settings
         severity: "High"
+        tested: true
   - uri: "/install.php"
     checks:
       - name: Install Script PHP
@@ -341,6 +378,7 @@ plugins:
         remediation: Delete install.php file
         description: Checks the presence of a PHP installation script
         severity: "Low"
+        tested: true
   - uri: "/administrator"
     checks:
       - name: Joomla admin interface
@@ -349,6 +387,7 @@ plugins:
         remediation: Check that the passwords used are robust
         description: Check access to Joomla's administration interface
         severity: "Informational"
+        tested: true
   - uri: "/https://example.com//"
     checks:
       - name: OpenRedirect
@@ -357,6 +396,7 @@ plugins:
         remediation: Patch open redirect vulnerability
         description: Detects the presence of Open Redirect type vulnerabilities
         severity: "Low"
+        tested: true
   - uri: "/phpinfo.php"
     checks:
       - name: PHPInfo
@@ -365,6 +405,7 @@ plugins:
         remediation: Disable phpinfo() in PHP.ini
         description: Checks that the phpinfo() function is accessible
         severity: "Low"
+        tested: true
   - uri: "/phpmyadmin"
     checks:
       - name: PHPMyAdmin
@@ -374,6 +415,7 @@ plugins:
         description: Checks that under /phpmyadmin a PHPMyAdmin instance is not accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/server-status"
     checks:
       - name: Server Status
@@ -382,6 +424,7 @@ plugins:
         remediation: Disable this feature in Apache
         description: Checks that under /server-status of Apache information is accessible
         severity: "Low"
+        tested: true
   - uri: "/examples/jsp/snp/snoop.jsp"
     checks:
       - name: Snoop
@@ -390,6 +433,7 @@ plugins:
         remediation: Delete basic files of a Tomcat installation
         description: Detects the presence of snoop.jsp files (default files in a Tomcat install)
         severity: "Informational"
+        tested: true
   - uri: "/actuator/health"
     checks:
       - name: SPringbootActuator
@@ -401,6 +445,7 @@ plugins:
         description: Checks that under /actuator/health information is not disclosed by Springboot
         severity: "Low"
         status_code: 200
+        tested: true
   - uri: "/health"
     checks:
       - name: SpringbootActuator
@@ -412,6 +457,7 @@ plugins:
         description: Checks that under /health information is not disclosed by Springboot
         severity: "Low"
         status_code: 200
+        tested: true
   - uri: "/.svn/wc.db"
     checks:
       - name: SVN db
@@ -421,6 +467,7 @@ plugins:
         description: Checks if an SVN database is publicly accessible
         status_code: 200
         severity: "High"
+        tested: true
   - uri: "/.svn/entries"
     checks:
       - name: SVN db
@@ -430,6 +477,7 @@ plugins:
         description: Checks if an SVN database is publicly accessible
         status_code: 200
         severity: "High"
+        tested: true
   - uri: "/web.config"
     checks:
       - name: Web Config
@@ -438,6 +486,7 @@ plugins:
         remediation: Check that no sensitive information is present in the web.config
         description: Checks that the web.config configuration file of the ASP.net server is not accessible
         severity: "Low"
+        tested: true
   - uri: "/wp-login.php"
     checks:
       - name: Wordpress Login Page
@@ -447,6 +496,7 @@ plugins:
         remediation: Set up an.htaccess to avoid exposing the admin interface unnecessarily
         description: Checks that under /wp-login the Worpress connection interface is not accessible
         severity: "Informational"
+        tested: true
   - uri: "/wp-links-opml.php"
     checks:
       - name: WpLinksOpml
@@ -455,6 +505,7 @@ plugins:
         remediation: Be sure the wordpress uses the latest version
         description: Retrieves the Wordpress version of the site
         severity: "Informational"
+        tested: true
   - uri: "/jmx-console/"
     checks:
       - name: JMX Console
@@ -463,6 +514,7 @@ plugins:
         remediation: Alter configurations to deny external access.
         description: JMX Console displays an index with all available services. Authentication can be bypassed by intruder.
         severity: "Medium"
+        tested: true
   - uri: "/tmui/login.jsp/..;/tmui/locallb/workspace/fileRead.jsp?fileName=/config/bigip.license"
     checks:
       - name: F5 BIG-IP - CVE-2020-5902
@@ -480,6 +532,7 @@ plugins:
         remediation: Make sure that F5 BIG-IP - TMUI access is monitored
         description: Checks that under /tmui a F5 BIG-IP TMUI is not accessible
         severity: "Low"
+        tested: true
   - uri: "/images/imgpaper.png"
     checks:
       - name: Possible Trickbot Trojan Payload hosting imgpaper.png on Apache
@@ -549,6 +602,7 @@ plugins:
         description: Stormshield SNS Web Admin Console is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/auth"
     checks:
       - name: Stormshield Web Portal
@@ -559,6 +613,7 @@ plugins:
         description: Stormshield Web Portal is accessible
         status_code: 200
         severity: "Informational"
+        tested: true
   - uri: "/ui"
     checks:
       - name: VMware ESXi
@@ -568,6 +623,7 @@ plugins:
         description: VMware ESXi is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/vsphere-client"
     checks:
       - name: VMware vCenter
@@ -577,6 +633,7 @@ plugins:
         description: VMware vCenter is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/eai/index.html"
     checks:
       - name: Enovacom Suite V2
@@ -586,6 +643,7 @@ plugins:
         description: EAI Enovacom Suite V2 is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/mailscanner/login.php"
     checks:
       - name: MailWatch
@@ -595,6 +653,7 @@ plugins:
         description: MailWatch is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/fog/management/index.php"
     checks:
       - name: FOG Project
@@ -605,6 +664,7 @@ plugins:
         description: FOG Project is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/.well-known/security.txt"
     checks:
       - name: Security.txt
@@ -614,6 +674,7 @@ plugins:
         description: Detects the presence of Security.txt file
         status_code: 200
         severity: "Informational"
+        tested: true
   - uri: "/XsEXPL"
     checks:
       - name: Xplore Web RIS
@@ -622,6 +683,7 @@ plugins:
         remediation: Make sure that Xplore Web RIS access is restricted & monitored
         description: Xplore Web RIS is accessible
         severity: "Informational"
+        tested: true
   - uri: "/zimbraAdmin"
     checks:
       - name: Zimbra Administration
@@ -630,6 +692,7 @@ plugins:
         remediation: Make sure that Zimbra Administration access is restricted & monitored
         description: Zimbra Administration is accessible
         severity: "Low"
+        tested: true
   - uri: "/public/img/mongo-express-logo.png"
     checks:
       - name: Mongo Express
@@ -650,6 +713,7 @@ plugins:
         description: Polycom Video Conferencing is accessible
         status_code: 200
         severity: "Informational"
+        tested: true
   - uri: "/securityRealm/user/admin/search/index?q=a"
     checks:
       - name: Jenkins CVE-2018-1000861 (RCE)
@@ -661,6 +725,7 @@ plugins:
         remediation: Patch the server as soon as possible
         description: Jenkins server is vulnerable to RCE CVE-2018-1000861
         severity: "High"
+        tested: true
   - uri: "/?MAIN=TOPACCESS"
     checks:
       - name: TopAccess Toshiba MFP
@@ -679,6 +744,7 @@ plugins:
         description: HP Printer is accessible
         status_code: 200
         severity: "Low"
+        tested: true
   - uri: "/config.html"
     checks:
       - name: Zebra Label Printer
@@ -688,3 +754,4 @@ plugins:
         description: Zebra Label Printer is accessible
         status_code: 200
         severity: "Low"
+        tested: true
