--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,6 +44,10 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14.x
       - uses: actions/checkout@v2
       - name: Unit Tests
         uses: go test ./...
