--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,8 +44,13 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14.x
       - uses: actions/checkout@v2
-
+      - name: Unit Tests
+        uses: go test ./...
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
