--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,5 +18,5 @@ jobs:
      - uses: actions/checkout@v1
      - run: |
         cat chopchop.yml | grep "uri:" | sort | uniq -c | sort -n
-        test=`cat chopchop.yml | grep "uri:" | sort | uniq -c | grep -v 1 | wc -l`
-        if [ $test != 0 ]; then echo "There shouldn't be multiple (and identical) 'uri'. It should be refactored. "; exit 1; fi
+        test=`cat chopchop.yml | grep "endpoint:" | sort | uniq -c | grep -v 1 | wc -l`
+        if [ $test != 0 ]; then echo "There shouldn't be multiple (and identical) 'endpoint'. It should be refactored. "; exit 1; fi
