--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -50,7 +50,7 @@ jobs:
           go-version: 1.14.x
       - uses: actions/checkout@v2
       - name: Unit Tests
-        uses: go test ./...
+        run: go test ./...
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
