--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,18 +117,22 @@ jobs:
       run: go get github.com/mitchellh/gox
 
     - name: Build using gox
-      run: gox -ldflags "-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE" -output "dist/ChopChop_{{.OS}}_{{.Arch}}"
+      run: |
+        cd cmd
+        gox -ldflags "-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE" \
+          -output "../artifacts/ChopChop_{{.OS}}_{{.Arch}}" \
+          -osarch="!darwin/386"
 
     - name: Upload ChopChop builds
       uses: actions/upload-artifact@v2
       with:
         name: chopchop-artifacts
-        path: dist/*
+        path: artifacts/*
 
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GHR_COMPRESS: gz
-        GHR_PATH: dist/
+        GHR_PATH: artifacts/
         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
