--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,13 +19,14 @@ jobs:
   push:
     runs-on: ubuntu-latest
     steps:
+      - name: Log into GitHub Container Registry
+      # The CR_PAT secret is a PAT with `read:packages` and `write:packages` scopes
+        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
       - uses: actions/checkout@v2
+
       - name: Build image
         run: docker build -t $IMAGE_NAME .
-
-      - name: Log into GitHub Container Registry
-      # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
-        run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push image to GitHub Container Registry
         run: |
