--- a/exchange-server.yml
+++ b/exchange-server.yml
@@ -1,5 +1,15 @@
 insecure: false
 plugins:
+  - endpoint: "/autodiscover/autodiscover.json?@test.com/owa/?=&Email=autodiscover/autodiscover.json?@test.com"
+    checks:
+      - name : Exchange vulnerable to ProxyShell
+        match :
+          - "errorfe.aspx"
+        remediation: Upgrade Exchange in latest CU version, apply last security update and verify you're not pwned
+        description: Exchange Server Vulnerable to ProxyShell - CVE-2021-34473 detected
+        status_code: 302
+        severity: "High"
+        tested: true
   - endpoint: "/owa/auth/logon.aspx"
     checks:
       - name : Exchange 2019 CU 10
@@ -10,8 +20,6 @@ plugins:
         status_code: 200
         severity: "Informational"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 9
         match:
           - '15.2.858'
@@ -20,8 +28,6 @@ plugins:
         status_code: 200
         severity: "Informational"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 8 > vulnerable
         match:
           - '15.2.792'
@@ -30,8 +36,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 7 > vulnerable
         match:
           - '15.2.721'
@@ -40,8 +44,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 6 > vulnerable
         match:
           - '15.2.659'
@@ -50,8 +52,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 5 > vulnerable
         match:
           - '15.2.595'
@@ -60,8 +60,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 4 > vulnerable
         match:
           - '15.2.529'
@@ -70,8 +68,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 3 > vulnerable
         match:
           - '15.2.464'
@@ -80,8 +76,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 2 > vulnerable
         match:
           - '15.2.397'
@@ -90,8 +84,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 CU 1 > vulnerable
         match:
           - '15.2.330'
@@ -100,8 +92,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 RTM > vulnerable
         match:
           - '15.2.221'
@@ -110,8 +100,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2019 Preview > vulnerable
         match:
           - '15.2.196'
@@ -120,8 +108,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 21
         match:
           - '15.1.2308'
@@ -130,8 +116,6 @@ plugins:
         status_code: 200
         severity: "Informational"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 20
         match:
           - '15.1.2242'
@@ -140,8 +124,6 @@ plugins:
         status_code: 200
         severity: "Informational"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 19 > vulnerable
         match:
           - '15.1.2176'
@@ -150,8 +132,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 18 > vulnerable
         match:
           - '15.1.2106'
@@ -160,8 +140,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 17 > vulnerable
         match:
           - '15.1.2044'
@@ -170,8 +148,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 16 > vulnerable
         match:
           - '15.1.1979'
@@ -180,8 +156,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 15 > vulnerable
         match:
           - '15.1.1913'
@@ -190,8 +164,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 14 > vulnerable
         match:
           - '15.1.1847'
@@ -200,8 +172,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 13 > vulnerable
         match:
           - '15.1.1779'
@@ -210,8 +180,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 12 > vulnerable
         match:
           - '15.1.1713'
@@ -220,8 +188,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 11 > vulnerable
         match:
           - '15.1.1591'
@@ -230,8 +196,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 10 > vulnerable
         match:
           - '15.1.1531'
@@ -240,8 +204,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 9 > vulnerable
         match:
           - '15.1.1466'
@@ -250,8 +212,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 8 > vulnerable
         match:
           - '15.1.1415'
@@ -260,8 +220,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 7 > vulnerable
         match:
           - '15.1.1261'
@@ -270,8 +228,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 6 > vulnerable
         match:
           - '15.1.1034'
@@ -280,8 +236,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 5 > vulnerable
         match:
           - '15.1.845'
@@ -290,8 +244,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 4 > vulnerable
         match:
           - '15.1.669'
@@ -300,8 +252,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 3 > vulnerable
         match:
           - '15.1.544'
@@ -310,8 +260,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 2 > vulnerable
         match:
           - '15.1.466'
@@ -320,8 +268,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 CU 1 > vulnerable
         match:
           - '15.1.396'
@@ -330,8 +276,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2016 RTM / Preview> vulnerable
         match:
           - '15.1.225'
@@ -340,8 +284,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2013 CU 23
         match:
           - '15.0.1497'
@@ -350,8 +292,6 @@ plugins:
         status_code: 200
         severity: "Informational"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2013 vulnerable version
         match:
           - '15.0'
@@ -362,8 +302,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2010 SP3 vulnerable version
         match:
           - '14.3'
@@ -372,8 +310,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange 2010 vulnerable version
         match:
           - '14.'
@@ -384,8 +320,6 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
-  - endpoint: "/owa/auth/logon.aspx"
-    checks:
       - name : Exchange oldests vulnerable version
         no_match :
           - '14.'
@@ -395,3 +329,12 @@ plugins:
         status_code: 200
         severity: "High"
         tested: true
+  - endpoint: "/"
+    checks:
+      - name: Kemp LoadMaster
+        headers:
+          - "Location:/lm_auth_proxy?DoLMLogin?"
+        remediation: Make sure that Kemp LoadMaster is up to date
+        description: Kemp LoadMaster is present
+        status_code: 302
+        severity: "Informational"
